# hs-projects

./: README.md
problems/: listProblems.hs  moreSolutions.hs
problems/listas/: enunciadosPart1.md  solucionesParte2.hs
problems/listas/parte2/: masSolucionesPart2.hs
tool-cli/: README.md  tool-cli.cabal
tool-cli/src/: Main.hs
